[gd_scene load_steps=12 format=4 uid="uid://j3wco8ufdwfl"]

[ext_resource type="Script" uid="uid://cxp65iclhk6b2" path="res://Core/gamemode.gd" id="1_fytin"]
[ext_resource type="PackedScene" uid="uid://dop1ow7ujglns" path="res://UI/hud.tscn" id="2_wwg88"]
[ext_resource type="PackedScene" uid="uid://clq61vitabmdv" path="res://Player/player.tscn" id="3_om2xw"]
[ext_resource type="Texture2D" uid="uid://7q6gbr83veqb" path="res://Resources/Environnment/CityRiver/TS_Main.png" id="4_q3u8h"]
[ext_resource type="PackedScene" uid="uid://nv3o2yn4gwv7" path="res://Placeables/Cars/car_spawner.tscn" id="5_iws45"]
[ext_resource type="Script" uid="uid://h0owdylhsvsd" path="res://Placeables/WaterArea/water_area.gd" id="7_cjke3"]
[ext_resource type="PackedScene" uid="uid://dhtpq4qid7fdc" path="res://Placeables/Logs/LogSpawner.tscn" id="7_f01to"]
[ext_resource type="PackedScene" uid="uid://dy1btlwtw7x4p" path="res://Placeables/end_pond.tscn" id="7_tjrio"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xgk1x"]
texture = ExtResource("4_q3u8h")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
0:2/0 = 0
3:1/0 = 0
3:2/0 = 0
4:2/0 = 0
4:1/0 = 0
4:0/0 = 0
5:0/0 = 0
5:1/0 = 0
6:1/0 = 0
6:0/0 = 0
7:0/0 = 0
7:1/0 = 0

[sub_resource type="TileSet" id="TileSet_s5uwl"]
tile_size = Vector2i(8, 8)
sources/0 = SubResource("TileSetAtlasSource_xgk1x")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_orf14"]
size = Vector2(256, 64)

[node name="Game" type="Node2D"]
script = ExtResource("1_fytin")

[node name="HUD" parent="." instance=ExtResource("2_wwg88")]

[node name="Player" parent="." instance=ExtResource("3_om2xw")]
z_index = 3
position = Vector2(128, 233)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(128, 233)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAIAAAAHAAAAAAAAAAMAAAAEAAAAAAAAAAQAAAAEAAEAAAAAAAUAAAAEAAIAAAAAAAYAAAAHAAAAAAAAAAcAAAAHAAAAAAAAAAgAAAAHAAAAAAAAAAkAAAAHAAAAAAAAAAoAAAAHAAAAAAAAAAsAAAAHAAAAAAAAAAwAAAAHAAAAAAAAAA0AAAAHAAAAAAAAAA4AAAAHAAAAAAAAAA8AAAAHAAAAAAABAAIAAAAHAAAAAAABAAMAAAAEAAAAAAABAAQAAAAEAAEAAAABAAUAAAAEAAIAAAABAAYAAAAHAAAAAAABAAcAAAAHAAAAAAABAAgAAAAHAAAAAAABAAkAAAAHAAAAAAABAAoAAAAHAAAAAAABAAsAAAAHAAAAAAABAAwAAAAHAAAAAAABAA0AAAAHAAAAAAABAA4AAAAHAAAAAAABAA8AAAAHAAAAAAACAAIAAAAHAAAAAAACAAMAAAAAAAAAAAACAAQAAAAAAAEAAAACAAUAAAAAAAIAAAACAAYAAAAHAAAAAAACAAcAAAAHAAAAAAACAAgAAAAHAAAAAAACAAkAAAAHAAAAAAACAAoAAAAHAAAAAAACAAsAAAAHAAAAAAACAAwAAAAHAAAAAAACAA0AAAAHAAAAAAACAA4AAAAHAAAAAAACAA8AAAAHAAAAAAADAAIAAAAHAAAAAAADAAMAAAABAAAAAAADAAQAAAAHAAAAAAADAAUAAAAHAAAAAAADAAYAAAAHAAAAAAADAAcAAAAHAAAAAAADAAgAAAAHAAAAAAADAAkAAAAHAAAAAAADAAoAAAAHAAAAAAADAAsAAAAHAAAAAAADAAwAAAAHAAAAAAADAA0AAAAHAAAAAAADAA4AAAAHAAAAAAADAA8AAAAHAAAAAAAEAAIAAAAHAAAAAAAEAAMAAAACAAAAAAAEAAQAAAAHAAAAAAAEAAUAAAAHAAAAAAAEAAYAAAAHAAAAAAAEAAcAAAAHAAAAAAAEAAgAAAAHAAAAAAAEAAkAAAAHAAAAAAAEAAoAAAAHAAAAAAAEAAsAAAAHAAAAAAAEAAwAAAAHAAAAAAAEAA0AAAAHAAAAAAAEAA4AAAAHAAAAAAAEAA8AAAAHAAAAAAAFAAIAAAAHAAAAAAAFAAMAAAADAAAAAAAFAAQAAAADAAEAAAAFAAUAAAADAAIAAAAFAAYAAAAHAAAAAAAFAAcAAAAHAAAAAAAFAAgAAAAHAAAAAAAFAAkAAAAHAAAAAAAFAAoAAAAHAAAAAAAFAAsAAAAHAAAAAAAFAAwAAAAHAAAAAAAFAA0AAAAHAAAAAAAFAA4AAAAHAAAAAAAFAA8AAAAHAAAAAAAGAAIAAAAHAAAAAAAGAAMAAAAEAAAAAAAGAAQAAAAEAAEAAAAGAAUAAAAEAAIAAAAGAAYAAAAHAAAAAAAGAAcAAAAHAAAAAAAGAAgAAAAHAAAAAAAGAAkAAAAHAAAAAAAGAAoAAAAHAAAAAAAGAAsAAAAHAAAAAAAGAAwAAAAHAAAAAAAGAA0AAAAHAAAAAAAGAA4AAAAHAAAAAAAGAA8AAAAHAAAAAAAHAAIAAAAHAAAAAAAHAAMAAAAEAAAAAAAHAAQAAAAEAAEAAAAHAAUAAAAEAAIAAAAHAAYAAAAHAAAAAAAHAAcAAAAHAAAAAAAHAAgAAAAHAAAAAAAHAAkAAAAHAAAAAAAHAAoAAAAHAAAAAAAHAAsAAAAHAAAAAAAHAAwAAAAHAAAAAAAHAA0AAAAHAAAAAAAHAA4AAAAHAAAAAAAHAA8AAAAHAAAAAAAIAAIAAAAHAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAEAAAAIAAUAAAAAAAIAAAAIAAYAAAAHAAAAAAAIAAcAAAAHAAAAAAAIAAgAAAAHAAAAAAAIAAkAAAAHAAAAAAAIAAoAAAAHAAAAAAAIAAsAAAAHAAAAAAAIAAwAAAAHAAAAAAAIAA0AAAAHAAAAAAAIAA4AAAAHAAAAAAAIAA8AAAAHAAAAAAAJAAIAAAAHAAAAAAAJAAMAAAABAAAAAAAJAAQAAAAHAAAAAAAJAAUAAAAHAAAAAAAJAAYAAAAHAAAAAAAJAAcAAAAHAAAAAAAJAAgAAAAHAAAAAAAJAAkAAAAHAAAAAAAJAAoAAAAHAAAAAAAJAAsAAAAHAAAAAAAJAAwAAAAHAAAAAAAJAA0AAAAHAAAAAAAJAA4AAAAHAAAAAAAJAA8AAAAHAAAAAAAKAAIAAAAHAAAAAAAKAAMAAAACAAAAAAAKAAQAAAAHAAAAAAAKAAUAAAAHAAAAAAAKAAYAAAAHAAAAAAAKAAcAAAAHAAAAAAAKAAgAAAAHAAAAAAAKAAkAAAAHAAAAAAAKAAoAAAAHAAAAAAAKAAsAAAAHAAAAAAAKAAwAAAAHAAAAAAAKAA0AAAAHAAAAAAAKAA4AAAAHAAAAAAAKAA8AAAAHAAAAAAALAAIAAAAHAAAAAAALAAMAAAADAAAAAAALAAQAAAADAAEAAAALAAUAAAADAAIAAAALAAYAAAAHAAAAAAALAAcAAAAHAAAAAAALAAgAAAAHAAAAAAALAAkAAAAHAAAAAAALAAoAAAAHAAAAAAALAAsAAAAHAAAAAAALAAwAAAAHAAAAAAALAA0AAAAHAAAAAAALAA4AAAAHAAAAAAALAA8AAAAHAAAAAAAMAAIAAAAHAAAAAAAMAAMAAAAEAAAAAAAMAAQAAAAEAAEAAAAMAAUAAAAEAAIAAAAMAAYAAAAHAAAAAAAMAAcAAAAHAAAAAAAMAAgAAAAHAAAAAAAMAAkAAAAHAAAAAAAMAAoAAAAHAAAAAAAMAAsAAAAHAAAAAAAMAAwAAAAHAAAAAAAMAA0AAAAHAAAAAAAMAA4AAAAHAAAAAAAMAA8AAAAHAAAAAAANAAIAAAAHAAAAAAANAAMAAAAEAAAAAAANAAQAAAAEAAEAAAANAAUAAAAEAAIAAAANAAYAAAAHAAAAAAANAAcAAAAHAAAAAAANAAgAAAAHAAAAAAANAAkAAAAHAAAAAAANAAoAAAAHAAAAAAANAAsAAAAHAAAAAAANAAwAAAAHAAAAAAANAA0AAAAHAAAAAAANAA4AAAAHAAAAAAANAA8AAAAHAAAAAAAOAAIAAAAHAAAAAAAOAAMAAAAAAAAAAAAOAAQAAAAAAAEAAAAOAAUAAAAAAAIAAAAOAAYAAAAHAAAAAAAOAAcAAAAHAAAAAAAOAAgAAAAHAAAAAAAOAAkAAAAHAAAAAAAOAAoAAAAHAAAAAAAOAAsAAAAHAAAAAAAOAAwAAAAHAAAAAAAOAA0AAAAHAAAAAAAOAA4AAAAHAAAAAAAOAA8AAAAHAAAAAAAPAAIAAAAHAAAAAAAPAAMAAAABAAAAAAAPAAQAAAAHAAAAAAAPAAUAAAAHAAAAAAAPAAYAAAAHAAAAAAAPAAcAAAAHAAAAAAAPAAgAAAAHAAAAAAAPAAkAAAAHAAAAAAAPAAoAAAAHAAAAAAAPAAsAAAAHAAAAAAAPAAwAAAAHAAAAAAAPAA0AAAAHAAAAAAAPAA4AAAAHAAAAAAAPAA8AAAAHAAAAAAAQAAIAAAAHAAAAAAAQAAMAAAACAAAAAAAQAAQAAAAHAAAAAAAQAAUAAAAHAAAAAAAQAAYAAAAHAAAAAAAQAAcAAAAHAAAAAAAQAAgAAAAHAAAAAAAQAAkAAAAHAAAAAAAQAAoAAAAHAAAAAAAQAAsAAAAHAAAAAAAQAAwAAAAHAAAAAAAQAA0AAAAHAAAAAAAQAA4AAAAHAAAAAAAQAA8AAAAHAAAAAAARAAIAAAAHAAAAAAARAAMAAAADAAAAAAARAAQAAAADAAEAAAARAAUAAAADAAIAAAARAAYAAAAHAAAAAAARAAcAAAAHAAAAAAARAAgAAAAHAAAAAAARAAkAAAAHAAAAAAARAAoAAAAHAAAAAAARAAsAAAAHAAAAAAARAAwAAAAHAAAAAAARAA0AAAAHAAAAAAARAA4AAAAHAAAAAAARAA8AAAAHAAAAAAASAAIAAAAHAAAAAAASAAMAAAAEAAAAAAASAAQAAAAEAAEAAAASAAUAAAAEAAIAAAASAAYAAAAHAAAAAAASAAcAAAAHAAAAAAASAAgAAAAHAAAAAAASAAkAAAAHAAAAAAASAAoAAAAHAAAAAAASAAsAAAAHAAAAAAASAAwAAAAHAAAAAAASAA0AAAAHAAAAAAASAA4AAAAHAAAAAAASAA8AAAAHAAAAAAATAAIAAAAHAAAAAAATAAMAAAAEAAAAAAATAAQAAAAEAAEAAAATAAUAAAAEAAIAAAATAAYAAAAHAAAAAAATAAcAAAAHAAAAAAATAAgAAAAHAAAAAAATAAkAAAAHAAAAAAATAAoAAAAHAAAAAAATAAsAAAAHAAAAAAATAAwAAAAHAAAAAAATAA0AAAAHAAAAAAATAA4AAAAHAAAAAAATAA8AAAAHAAAAAAAUAAIAAAAHAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAAAAEAAAAUAAUAAAAAAAIAAAAUAAYAAAAHAAAAAAAUAAcAAAAHAAAAAAAUAAgAAAAHAAAAAAAUAAkAAAAHAAAAAAAUAAoAAAAHAAAAAAAUAAsAAAAHAAAAAAAUAAwAAAAHAAAAAAAUAA0AAAAHAAAAAAAUAA4AAAAHAAAAAAAUAA8AAAAHAAAAAAAVAAIAAAAHAAAAAAAVAAMAAAABAAAAAAAVAAQAAAAHAAAAAAAVAAUAAAAHAAAAAAAVAAYAAAAHAAAAAAAVAAcAAAAHAAAAAAAVAAgAAAAHAAAAAAAVAAkAAAAHAAAAAAAVAAoAAAAHAAAAAAAVAAsAAAAHAAAAAAAVAAwAAAAHAAAAAAAVAA0AAAAHAAAAAAAVAA4AAAAHAAAAAAAVAA8AAAAHAAAAAAAWAAIAAAAHAAAAAAAWAAMAAAACAAAAAAAWAAQAAAAHAAAAAAAWAAUAAAAHAAAAAAAWAAYAAAAHAAAAAAAWAAcAAAAHAAAAAAAWAAgAAAAHAAAAAAAWAAkAAAAHAAAAAAAWAAoAAAAHAAAAAAAWAAsAAAAHAAAAAAAWAAwAAAAHAAAAAAAWAA0AAAAHAAAAAAAWAA4AAAAHAAAAAAAWAA8AAAAHAAAAAAAXAAIAAAAHAAAAAAAXAAMAAAADAAAAAAAXAAQAAAADAAEAAAAXAAUAAAADAAIAAAAXAAYAAAAHAAAAAAAXAAcAAAAHAAAAAAAXAAgAAAAHAAAAAAAXAAkAAAAHAAAAAAAXAAoAAAAHAAAAAAAXAAsAAAAHAAAAAAAXAAwAAAAHAAAAAAAXAA0AAAAHAAAAAAAXAA4AAAAHAAAAAAAXAA8AAAAHAAAAAAAYAAIAAAAHAAAAAAAYAAMAAAAEAAAAAAAYAAQAAAAEAAEAAAAYAAUAAAAEAAIAAAAYAAYAAAAHAAAAAAAYAAcAAAAHAAAAAAAYAAgAAAAHAAAAAAAYAAkAAAAHAAAAAAAYAAoAAAAHAAAAAAAYAAsAAAAHAAAAAAAYAAwAAAAHAAAAAAAYAA0AAAAHAAAAAAAYAA4AAAAHAAAAAAAYAA8AAAAHAAAAAAAZAAIAAAAHAAAAAAAZAAMAAAAEAAAAAAAZAAQAAAAEAAEAAAAZAAUAAAAEAAIAAAAZAAYAAAAHAAAAAAAZAAcAAAAHAAAAAAAZAAgAAAAHAAAAAAAZAAkAAAAHAAAAAAAZAAoAAAAHAAAAAAAZAAsAAAAHAAAAAAAZAAwAAAAHAAAAAAAZAA0AAAAHAAAAAAAZAA4AAAAHAAAAAAAZAA8AAAAHAAAAAAAaAAIAAAAHAAAAAAAaAAMAAAAAAAAAAAAaAAQAAAAAAAEAAAAaAAUAAAAAAAIAAAAaAAYAAAAHAAAAAAAaAAcAAAAHAAAAAAAaAAgAAAAHAAAAAAAaAAkAAAAHAAAAAAAaAAoAAAAHAAAAAAAaAAsAAAAHAAAAAAAaAAwAAAAHAAAAAAAaAA0AAAAHAAAAAAAaAA4AAAAHAAAAAAAaAA8AAAAHAAAAAAAbAAIAAAAHAAAAAAAbAAMAAAABAAAAAAAbAAQAAAAHAAAAAAAbAAUAAAAHAAAAAAAbAAYAAAAHAAAAAAAbAAcAAAAHAAAAAAAbAAgAAAAHAAAAAAAbAAkAAAAHAAAAAAAbAAoAAAAHAAAAAAAbAAsAAAAHAAAAAAAbAAwAAAAHAAAAAAAbAA0AAAAHAAAAAAAbAA4AAAAHAAAAAAAbAA8AAAAHAAAAAAAcAAIAAAAHAAAAAAAcAAMAAAACAAAAAAAcAAQAAAAHAAAAAAAcAAUAAAAHAAAAAAAcAAYAAAAHAAAAAAAcAAcAAAAHAAAAAAAcAAgAAAAHAAAAAAAcAAkAAAAHAAAAAAAcAAoAAAAHAAAAAAAcAAsAAAAHAAAAAAAcAAwAAAAHAAAAAAAcAA0AAAAHAAAAAAAcAA4AAAAHAAAAAAAcAA8AAAAHAAAAAAAdAAIAAAAHAAAAAAAdAAMAAAADAAAAAAAdAAQAAAADAAEAAAAdAAUAAAADAAIAAAAdAAYAAAAHAAAAAAAdAAcAAAAHAAAAAAAdAAgAAAAHAAAAAAAdAAkAAAAHAAAAAAAdAAoAAAAHAAAAAAAdAAsAAAAHAAAAAAAdAAwAAAAHAAAAAAAdAA0AAAAHAAAAAAAdAA4AAAAHAAAAAAAdAA8AAAAHAAAAAAAeAAIAAAAHAAAAAAAeAAMAAAAEAAAAAAAeAAQAAAAEAAEAAAAeAAUAAAAEAAIAAAAeAAYAAAAHAAAAAAAeAAcAAAAHAAAAAAAeAAgAAAAHAAAAAAAeAAkAAAAHAAAAAAAeAAoAAAAHAAAAAAAeAAsAAAAHAAAAAAAeAAwAAAAHAAAAAAAeAA0AAAAHAAAAAAAeAA4AAAAHAAAAAAAeAA8AAAAHAAAAAAAfAAIAAAAHAAAAAAAfAAMAAAAEAAAAAAAfAAQAAAAEAAEAAAAfAAUAAAAEAAIAAAAfAAYAAAAHAAAAAAAfAAcAAAAHAAAAAAAfAAgAAAAHAAAAAAAfAAkAAAAHAAAAAAAfAAoAAAAHAAAAAAAfAAsAAAAHAAAAAAAfAAwAAAAHAAAAAAAfAA0AAAAHAAAAAAAfAA4AAAAHAAAAAAAfAA8AAAAHAAAAAAAAABAAAAAFAAAAAAAAABEAAAAFAAEAAAAAABwAAAAFAAAAAAAAAB0AAAAFAAEAAAABABAAAAAGAAAAAAABABEAAAAGAAEAAAABABwAAAAGAAAAAAABAB0AAAAGAAEAAAACABAAAAAFAAAAAAACABEAAAAFAAEAAAACABwAAAAFAAAAAAACAB0AAAAFAAEAAAADABAAAAAGAAAAAAADABEAAAAGAAEAAAADABwAAAAGAAAAAAADAB0AAAAGAAEAAAAEABAAAAAFAAAAAAAEABEAAAAFAAEAAAAEABwAAAAFAAAAAAAEAB0AAAAFAAEAAAAFABAAAAAGAAAAAAAFABEAAAAGAAEAAAAFABwAAAAGAAAAAAAFAB0AAAAGAAEAAAAGABAAAAAFAAAAAAAGABEAAAAFAAEAAAAGABwAAAAFAAAAAAAGAB0AAAAFAAEAAAAHABAAAAAGAAAAAAAHABEAAAAGAAEAAAAHABwAAAAGAAAAAAAHAB0AAAAGAAEAAAAIABAAAAAFAAAAAAAIABEAAAAFAAEAAAAIABwAAAAFAAAAAAAIAB0AAAAFAAEAAAAJABAAAAAGAAAAAAAJABEAAAAGAAEAAAAJABwAAAAGAAAAAAAJAB0AAAAGAAEAAAAKABAAAAAFAAAAAAAKABEAAAAFAAEAAAAKABwAAAAFAAAAAAAKAB0AAAAFAAEAAAALABAAAAAGAAAAAAALABEAAAAGAAEAAAALABwAAAAGAAAAAAALAB0AAAAGAAEAAAAMABAAAAAFAAAAAAAMABEAAAAFAAEAAAAMABwAAAAFAAAAAAAMAB0AAAAFAAEAAAANABAAAAAGAAAAAAANABEAAAAGAAEAAAANABwAAAAGAAAAAAANAB0AAAAGAAEAAAAOABAAAAAFAAAAAAAOABEAAAAFAAEAAAAOABwAAAAFAAAAAAAOAB0AAAAFAAEAAAAPABAAAAAGAAAAAAAPABEAAAAGAAEAAAAPABwAAAAGAAAAAAAPAB0AAAAGAAEAAAAQABAAAAAFAAAAAAAQABEAAAAFAAEAAAAQABwAAAAFAAAAAAAQAB0AAAAFAAEAAAARABAAAAAGAAAAAAARABEAAAAGAAEAAAARABwAAAAGAAAAAAARAB0AAAAGAAEAAAASABAAAAAFAAAAAAASABEAAAAFAAEAAAASABwAAAAFAAAAAAASAB0AAAAFAAEAAAATABAAAAAGAAAAAAATABEAAAAGAAEAAAATABwAAAAGAAAAAAATAB0AAAAGAAEAAAAUABAAAAAFAAAAAAAUABEAAAAFAAEAAAAUABwAAAAFAAAAAAAUAB0AAAAFAAEAAAAVABAAAAAGAAAAAAAVABEAAAAGAAEAAAAVABwAAAAGAAAAAAAVAB0AAAAGAAEAAAAWABAAAAAFAAAAAAAWABEAAAAFAAEAAAAWABwAAAAFAAAAAAAWAB0AAAAFAAEAAAAXABAAAAAGAAAAAAAXABEAAAAGAAEAAAAXABwAAAAGAAAAAAAXAB0AAAAGAAEAAAAYABAAAAAFAAAAAAAYABEAAAAFAAEAAAAYABwAAAAFAAAAAAAYAB0AAAAFAAEAAAAZABAAAAAGAAAAAAAZABEAAAAGAAEAAAAZABwAAAAGAAAAAAAZAB0AAAAGAAEAAAAaABAAAAAFAAAAAAAaABEAAAAFAAEAAAAaABwAAAAFAAAAAAAaAB0AAAAFAAEAAAAbABAAAAAGAAAAAAAbABEAAAAGAAEAAAAbABwAAAAGAAAAAAAbAB0AAAAGAAEAAAAcABAAAAAFAAAAAAAcABEAAAAFAAEAAAAcABwAAAAFAAAAAAAcAB0AAAAFAAEAAAAdABAAAAAGAAAAAAAdABEAAAAGAAEAAAAdABwAAAAGAAAAAAAdAB0AAAAGAAEAAAAeABAAAAAFAAAAAAAeABEAAAAFAAEAAAAeABwAAAAFAAAAAAAeAB0AAAAFAAEAAAAfABAAAAAGAAAAAAAfABEAAAAGAAEAAAAfABwAAAAGAAAAAAAfAB0AAAAGAAEAAAAAABIAAAAHAAEAAAAAABMAAAAHAAEAAAAAABQAAAAHAAEAAAAAABUAAAAHAAEAAAAAABYAAAAHAAEAAAAAABcAAAAHAAEAAAAAABgAAAAHAAEAAAAAABkAAAAHAAEAAAAAABoAAAAHAAEAAAAAABsAAAAHAAEAAAAfABsAAAAHAAEAAAAfABoAAAAHAAEAAAAfABkAAAAHAAEAAAAfABgAAAAHAAEAAAAeABgAAAAHAAEAAAAeABcAAAAHAAEAAAAeABYAAAAHAAEAAAAeABUAAAAHAAEAAAAeABQAAAAHAAEAAAAeABMAAAAHAAEAAAAfABMAAAAHAAEAAAAfABIAAAAHAAEAAAAfABQAAAAHAAEAAAAfABUAAAAHAAEAAAAfABYAAAAHAAEAAAAfABcAAAAHAAEAAAAHABYAAAAHAAEAAAAHABUAAAAHAAEAAAAHABQAAAAHAAEAAAAHABMAAAAHAAEAAAAHABIAAAAHAAEAAAAGABIAAAAHAAEAAAAFABIAAAAHAAEAAAAEABIAAAAHAAEAAAADABIAAAAHAAEAAAACABIAAAAHAAEAAAABABIAAAAHAAEAAAABABMAAAAHAAEAAAABABQAAAAHAAEAAAABABUAAAAHAAEAAAABABYAAAAHAAEAAAABABcAAAAHAAEAAAABABgAAAAHAAEAAAABABkAAAAHAAEAAAABABoAAAAHAAEAAAABABsAAAAHAAEAAAACABsAAAAHAAEAAAACABoAAAAHAAEAAAACABkAAAAHAAEAAAACABgAAAAHAAEAAAACABcAAAAHAAEAAAACABYAAAAHAAEAAAACABUAAAAHAAEAAAACABQAAAAHAAEAAAACABMAAAAHAAEAAAADABMAAAAHAAEAAAADABQAAAAHAAEAAAADABUAAAAHAAEAAAADABYAAAAHAAEAAAADABcAAAAHAAEAAAADABgAAAAHAAEAAAADABkAAAAHAAEAAAADABoAAAAHAAEAAAADABsAAAAHAAEAAAAEABsAAAAHAAEAAAAEABoAAAAHAAEAAAAEABkAAAAHAAEAAAAEABgAAAAHAAEAAAAEABcAAAAHAAEAAAAEABYAAAAHAAEAAAAEABUAAAAHAAEAAAAEABQAAAAHAAEAAAAEABMAAAAHAAEAAAAFABMAAAAHAAEAAAAFABQAAAAHAAEAAAAFABUAAAAHAAEAAAAFABYAAAAHAAEAAAAFABcAAAAHAAEAAAAFABgAAAAHAAEAAAAFABkAAAAHAAEAAAAFABoAAAAHAAEAAAAFABsAAAAHAAEAAAAGABsAAAAHAAEAAAAGABoAAAAHAAEAAAAGABkAAAAHAAEAAAAGABgAAAAHAAEAAAAGABcAAAAHAAEAAAAGABYAAAAHAAEAAAAGABUAAAAHAAEAAAAGABQAAAAHAAEAAAAGABMAAAAHAAEAAAAHABcAAAAHAAEAAAAHABgAAAAHAAEAAAAHABkAAAAHAAEAAAAHABoAAAAHAAEAAAAHABsAAAAHAAEAAAAIABsAAAAHAAEAAAAIABoAAAAHAAEAAAAIABkAAAAHAAEAAAAIABgAAAAHAAEAAAAIABcAAAAHAAEAAAAIABYAAAAHAAEAAAAIABUAAAAHAAEAAAAIABQAAAAHAAEAAAAIABMAAAAHAAEAAAAIABIAAAAHAAEAAAAJABIAAAAHAAEAAAAJABMAAAAHAAEAAAAJABQAAAAHAAEAAAAJABUAAAAHAAEAAAAJABYAAAAHAAEAAAAJABcAAAAHAAEAAAAJABgAAAAHAAEAAAAJABkAAAAHAAEAAAAJABoAAAAHAAEAAAAJABsAAAAHAAEAAAAKABsAAAAHAAEAAAAKABoAAAAHAAEAAAAKABkAAAAHAAEAAAAKABgAAAAHAAEAAAAKABcAAAAHAAEAAAAKABYAAAAHAAEAAAAKABUAAAAHAAEAAAAKABQAAAAHAAEAAAAKABMAAAAHAAEAAAAKABIAAAAHAAEAAAALABIAAAAHAAEAAAALABMAAAAHAAEAAAALABQAAAAHAAEAAAALABUAAAAHAAEAAAALABYAAAAHAAEAAAALABcAAAAHAAEAAAALABgAAAAHAAEAAAALABkAAAAHAAEAAAALABoAAAAHAAEAAAALABsAAAAHAAEAAAAMABsAAAAHAAEAAAAMABoAAAAHAAEAAAAMABkAAAAHAAEAAAAMABgAAAAHAAEAAAAMABcAAAAHAAEAAAAMABYAAAAHAAEAAAAMABUAAAAHAAEAAAAMABQAAAAHAAEAAAAMABMAAAAHAAEAAAAMABIAAAAHAAEAAAANABIAAAAHAAEAAAANABMAAAAHAAEAAAANABQAAAAHAAEAAAANABUAAAAHAAEAAAANABYAAAAHAAEAAAANABcAAAAHAAEAAAANABgAAAAHAAEAAAANABkAAAAHAAEAAAANABoAAAAHAAEAAAANABsAAAAHAAEAAAAOABsAAAAHAAEAAAAOABoAAAAHAAEAAAAOABkAAAAHAAEAAAAOABgAAAAHAAEAAAAOABcAAAAHAAEAAAAOABYAAAAHAAEAAAAOABUAAAAHAAEAAAAOABQAAAAHAAEAAAAOABMAAAAHAAEAAAAOABIAAAAHAAEAAAAPABIAAAAHAAEAAAAPABMAAAAHAAEAAAAPABQAAAAHAAEAAAAPABUAAAAHAAEAAAAPABYAAAAHAAEAAAAPABcAAAAHAAEAAAAPABgAAAAHAAEAAAAPABkAAAAHAAEAAAAPABoAAAAHAAEAAAAPABsAAAAHAAEAAAAQABsAAAAHAAEAAAAQABoAAAAHAAEAAAAQABkAAAAHAAEAAAAQABgAAAAHAAEAAAAQABcAAAAHAAEAAAAQABYAAAAHAAEAAAAQABUAAAAHAAEAAAAQABQAAAAHAAEAAAAQABMAAAAHAAEAAAAQABIAAAAHAAEAAAARABIAAAAHAAEAAAARABMAAAAHAAEAAAARABQAAAAHAAEAAAARABUAAAAHAAEAAAARABYAAAAHAAEAAAARABcAAAAHAAEAAAARABgAAAAHAAEAAAARABkAAAAHAAEAAAARABoAAAAHAAEAAAARABsAAAAHAAEAAAASABsAAAAHAAEAAAASABoAAAAHAAEAAAASABkAAAAHAAEAAAASABgAAAAHAAEAAAASABcAAAAHAAEAAAASABYAAAAHAAEAAAASABUAAAAHAAEAAAASABQAAAAHAAEAAAASABMAAAAHAAEAAAASABIAAAAHAAEAAAATABIAAAAHAAEAAAATABMAAAAHAAEAAAATABQAAAAHAAEAAAATABUAAAAHAAEAAAATABYAAAAHAAEAAAATABcAAAAHAAEAAAATABgAAAAHAAEAAAATABkAAAAHAAEAAAATABoAAAAHAAEAAAATABsAAAAHAAEAAAAUABsAAAAHAAEAAAAUABoAAAAHAAEAAAAUABkAAAAHAAEAAAAUABgAAAAHAAEAAAAUABcAAAAHAAEAAAAUABYAAAAHAAEAAAAUABUAAAAHAAEAAAAUABQAAAAHAAEAAAAUABMAAAAHAAEAAAAUABIAAAAHAAEAAAAVABIAAAAHAAEAAAAVABMAAAAHAAEAAAAVABQAAAAHAAEAAAAVABUAAAAHAAEAAAAVABYAAAAHAAEAAAAVABcAAAAHAAEAAAAVABgAAAAHAAEAAAAVABkAAAAHAAEAAAAVABoAAAAHAAEAAAAVABsAAAAHAAEAAAAWABsAAAAHAAEAAAAWABoAAAAHAAEAAAAWABkAAAAHAAEAAAAWABgAAAAHAAEAAAAWABcAAAAHAAEAAAAWABYAAAAHAAEAAAAWABUAAAAHAAEAAAAWABQAAAAHAAEAAAAWABMAAAAHAAEAAAAWABIAAAAHAAEAAAAXABIAAAAHAAEAAAAXABMAAAAHAAEAAAAXABQAAAAHAAEAAAAXABUAAAAHAAEAAAAXABYAAAAHAAEAAAAXABcAAAAHAAEAAAAXABgAAAAHAAEAAAAXABkAAAAHAAEAAAAXABoAAAAHAAEAAAAXABsAAAAHAAEAAAAYABsAAAAHAAEAAAAYABoAAAAHAAEAAAAYABkAAAAHAAEAAAAYABgAAAAHAAEAAAAYABcAAAAHAAEAAAAYABYAAAAHAAEAAAAYABUAAAAHAAEAAAAYABQAAAAHAAEAAAAYABMAAAAHAAEAAAAYABIAAAAHAAEAAAAZABIAAAAHAAEAAAAZABMAAAAHAAEAAAAZABQAAAAHAAEAAAAZABUAAAAHAAEAAAAZABYAAAAHAAEAAAAZABcAAAAHAAEAAAAZABgAAAAHAAEAAAAZABkAAAAHAAEAAAAZABoAAAAHAAEAAAAZABsAAAAHAAEAAAAaABsAAAAHAAEAAAAaABoAAAAHAAEAAAAaABkAAAAHAAEAAAAaABgAAAAHAAEAAAAaABcAAAAHAAEAAAAaABYAAAAHAAEAAAAaABUAAAAHAAEAAAAaABQAAAAHAAEAAAAaABMAAAAHAAEAAAAaABIAAAAHAAEAAAAbABIAAAAHAAEAAAAbABMAAAAHAAEAAAAbABQAAAAHAAEAAAAbABUAAAAHAAEAAAAbABYAAAAHAAEAAAAbABcAAAAHAAEAAAAbABgAAAAHAAEAAAAbABkAAAAHAAEAAAAbABoAAAAHAAEAAAAbABsAAAAHAAEAAAAcABsAAAAHAAEAAAAcABoAAAAHAAEAAAAcABkAAAAHAAEAAAAcABgAAAAHAAEAAAAcABcAAAAHAAEAAAAcABYAAAAHAAEAAAAcABUAAAAHAAEAAAAcABQAAAAHAAEAAAAcABMAAAAHAAEAAAAcABIAAAAHAAEAAAAdABIAAAAHAAEAAAAdABMAAAAHAAEAAAAdABQAAAAHAAEAAAAdABUAAAAHAAEAAAAdABYAAAAHAAEAAAAdABcAAAAHAAEAAAAdABgAAAAHAAEAAAAdABkAAAAHAAEAAAAdABoAAAAHAAEAAAAdABsAAAAHAAEAAAAeABsAAAAHAAEAAAAeABoAAAAHAAEAAAAeABkAAAAHAAEAAAAeABIAAAAHAAEAAAAMAB4AAAAHAAEAAAALAB4AAAAHAAEAAAAKAB4AAAAHAAEAAAAJAB4AAAAHAAEAAAAIAB4AAAAHAAEAAAAHAB4AAAAHAAEAAAAGAB4AAAAHAAEAAAAFAB4AAAAHAAEAAAAEAB4AAAAHAAEAAAADAB4AAAAHAAEAAAACAB4AAAAHAAEAAAABAB4AAAAHAAEAAAAAAB4AAAAHAAEAAAAAAB8AAAAHAAEAAAABAB8AAAAHAAEAAAACAB8AAAAHAAEAAAADAB8AAAAHAAEAAAAEAB8AAAAHAAEAAAAFAB8AAAAHAAEAAAAGAB8AAAAHAAEAAAAHAB8AAAAHAAEAAAAIAB8AAAAHAAEAAAAJAB8AAAAHAAEAAAAKAB8AAAAHAAEAAAALAB8AAAAHAAEAAAAMAB8AAAAHAAEAAAANAB8AAAAHAAEAAAANAB4AAAAHAAEAAAAOAB4AAAAHAAEAAAAOAB8AAAAHAAEAAAAPAB8AAAAHAAEAAAAPAB4AAAAHAAEAAAAQAB4AAAAHAAEAAAAQAB8AAAAHAAEAAAARAB8AAAAHAAEAAAARAB4AAAAHAAEAAAASAB4AAAAHAAEAAAASAB8AAAAHAAEAAAATAB8AAAAHAAEAAAATAB4AAAAHAAEAAAAUAB4AAAAHAAEAAAAUAB8AAAAHAAEAAAAVAB8AAAAHAAEAAAAVAB4AAAAHAAEAAAAWAB4AAAAHAAEAAAAWAB8AAAAHAAEAAAAXAB8AAAAHAAEAAAAXAB4AAAAHAAEAAAAYAB4AAAAHAAEAAAAYAB8AAAAHAAEAAAAZAB8AAAAHAAEAAAAZAB4AAAAHAAEAAAAaAB4AAAAHAAEAAAAaAB8AAAAHAAEAAAAbAB8AAAAHAAEAAAAbAB4AAAAHAAEAAAAcAB4AAAAHAAEAAAAcAB8AAAAHAAEAAAAdAB8AAAAHAAEAAAAdAB4AAAAHAAEAAAAeAB4AAAAHAAEAAAAeAB8AAAAHAAEAAAAfAB8AAAAHAAEAAAAfAB4AAAAHAAEAAAAAAAEAAAAHAAAAAAAAAAAAAAAHAAAAAAABAAAAAAAHAAAAAAACAAAAAAAHAAAAAAADAAAAAAAHAAAAAAAEAAAAAAAHAAAAAAAFAAAAAAAHAAAAAAAGAAAAAAAHAAAAAAAHAAAAAAAHAAAAAAAIAAAAAAAHAAAAAAAJAAAAAAAHAAAAAAAKAAAAAAAHAAAAAAALAAAAAAAHAAAAAAAMAAAAAAAHAAAAAAANAAAAAAAHAAAAAAAOAAAAAAAHAAAAAAAPAAAAAAAHAAAAAAAQAAAAAAAHAAAAAAARAAAAAAAHAAAAAAASAAAAAAAHAAAAAAATAAAAAAAHAAAAAAATAAEAAAAHAAAAAAAUAAEAAAAHAAAAAAAVAAEAAAAHAAAAAAAWAAEAAAAHAAAAAAAXAAEAAAAHAAAAAAAYAAEAAAAHAAAAAAAZAAEAAAAHAAAAAAAaAAEAAAAHAAAAAAAbAAEAAAAHAAAAAAAcAAEAAAAHAAAAAAAdAAEAAAAHAAAAAAAdAAAAAAAHAAAAAAAeAAAAAAAHAAAAAAAfAAAAAAAHAAAAAAAfAAEAAAAHAAAAAAAeAAEAAAAHAAAAAAAbAAAAAAAHAAAAAAAaAAAAAAAHAAAAAAAZAAAAAAAHAAAAAAAYAAAAAAAHAAAAAAAXAAAAAAAHAAAAAAAWAAAAAAAHAAAAAAAVAAAAAAAHAAAAAAAUAAAAAAAHAAAAAAAPAAEAAAAHAAAAAAAOAAEAAAAHAAAAAAANAAEAAAAHAAAAAAAMAAEAAAAHAAAAAAALAAEAAAAHAAAAAAAKAAEAAAAHAAAAAAAJAAEAAAAHAAAAAAAIAAEAAAAHAAAAAAAHAAEAAAAHAAAAAAAGAAEAAAAHAAAAAAAFAAEAAAAHAAAAAAAEAAEAAAAHAAAAAAADAAEAAAAHAAAAAAACAAEAAAAHAAAAAAABAAEAAAAHAAAAAAAQAAEAAAAHAAAAAAARAAEAAAAHAAAAAAASAAEAAAAHAAAAAAAcAAAAAAAHAAAAAAA=")
tile_set = SubResource("TileSet_s5uwl")
metadata/_edit_lock_ = true

[node name="Cars" type="Node" parent="."]

[node name="CarSpawners" type="Node" parent="."]

[node name="SPWN_RaceCar" parent="CarSpawners" instance=ExtResource("5_iws45")]
position = Vector2(272, 216)
car_model = 1
go_left = true
car_speed = 7
timer = 10

[node name="SPWN_Tractor" parent="CarSpawners" instance=ExtResource("5_iws45")]
position = Vector2(-11, 201)
car_model = 3
car_speed = 15
timer = 7

[node name="SPWN_Car" parent="CarSpawners" instance=ExtResource("5_iws45")]
position = Vector2(272, 184)
go_left = true
car_speed = 20
timer = 4

[node name="SPWN_RaceCar2" parent="CarSpawners" instance=ExtResource("5_iws45")]
position = Vector2(-11, 168)
car_model = 2
car_speed = 30

[node name="SPWN_Truck" parent="CarSpawners" instance=ExtResource("5_iws45")]
position = Vector2(272, 152)
scale = Vector2(-206023020000, -27619.537)
car_model = 4
go_left = true
car_speed = 40
timer = 3

[node name="Ends" type="Node" parent="."]

[node name="EndPond" parent="Ends" instance=ExtResource("7_tjrio")]
position = Vector2(32, 40)

[node name="EndPond2" parent="Ends" instance=ExtResource("7_tjrio")]
position = Vector2(128, 40)

[node name="EndPond3" parent="Ends" instance=ExtResource("7_tjrio")]
position = Vector2(80, 40)

[node name="EndPond4" parent="Ends" instance=ExtResource("7_tjrio")]
position = Vector2(176, 40)

[node name="EndPond5" parent="Ends" instance=ExtResource("7_tjrio")]
position = Vector2(224, 40)

[node name="Logs" type="Node" parent="."]

[node name="Spawner" parent="Logs" instance=ExtResource("7_f01to")]
position = Vector2(-8, 120)
speed = 60
timer = 4

[node name="Spawner2" parent="Logs" instance=ExtResource("7_f01to")]
position = Vector2(264, 104)
lane = 1
is_left = true
speed = 90
timer = 2

[node name="Spawner3" parent="Logs" instance=ExtResource("7_f01to")]
position = Vector2(-8, 88)
lane = 2
speed = 45

[node name="Spawner4" parent="Logs" instance=ExtResource("7_f01to")]
position = Vector2(264, 72)
lane = 3
is_left = true
speed = 115
timer = 2

[node name="Spawner5" parent="Logs" instance=ExtResource("7_f01to")]
position = Vector2(-8, 56)
lane = 4
speed = 65
timer = 2

[node name="Water" type="Area2D" parent="."]
position = Vector2(124.45517, 92.11719)
collision_mask = 4
script = ExtResource("7_cjke3")

[node name="WaterArea" type="CollisionShape2D" parent="Water"]
position = Vector2(3.5448303, -4.1171875)
shape = SubResource("RectangleShape2D_orf14")

[connection signal="on_player_death" from="Player" to="." method="on_player_death"]
[connection signal="on_player_gameover" from="Player" to="." method="_on_player_gameover"]
[connection signal="body_entered" from="Water" to="Water" method="_on_body_entered"]
[connection signal="body_exited" from="Water" to="Water" method="_on_body_exited"]
